--- a/Expressjs/package.json
+++ b/Expressjs/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-async-error": "^0.0.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^7.1.0",
     "git": "^0.1.5",
     "github": "^14.0.0",
     "jsonwebtoken": "^9.0.2",
