--- a/Expressjs/package.json
+++ b/Expressjs/package.json
@@ -4,7 +4,7 @@
   "description": "Express Basics",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon express.js",
+    "start": "nodemon --env-file=.env server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
